--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,54 @@ main {
   flex: 1;
 }
 
+#header_container {
+    background-color: #0098cd;
+    color: aliceblue
+}
+
 footer {
   text-align: center;
   padding: 3px;
   background-color: black;
   color: white;
 }
+
+#div_graficos_container {
+    width: auto;
+    height: auto;
+    margin-right: 0px;    
+    margin-left: 0px;    
+    background-color: floralwhite;  
+    margin-bottom: 40px;
+}
+
+#div_graficos_d3_n1, #div_graficos_d3_n2{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin-right: 50px;    
+  margin-left: 50px;         
+  margin-top: 50px;             
+  margin-bottom: 50px;             
+}
+
+ .tooltip{
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+    font-family: Arial, helvetica, sans-serif;
+    font-size: 1rem;
+    padding: .5rem;
+    background-color: black;
+    border: 1px solid #FFFFFF;
+    box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 10px;
+    color: #FFFFFF;
+    border-radius: 4px;                        
+}
+
+#divTile{
+    background-color: antiquewhite;
+    margin-top: 20px;
+}
+
+
